feat(cc): CC-3 added redis caching  (56-29212)